--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,17 @@ pb
 *.output
 *.tab.c
 *.tab.h
+
+## Xcode
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata/
+*.moved-aside
+*.xccheckout
+*.xcscmblueprint
